<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.saphyra</groupId>
    <artifactId>apphub-integration</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>apphub-integration</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>

        <!-- Platform Versions -->
        <versions.maven-surefire-plugin>3.0.0-M8</versions.maven-surefire-plugin>
        <versions.postgresql-connector>42.5.1</versions.postgresql-connector>

        <!-- Lib Versions -->
        <versions.assertj-core>3.24.1</versions.assertj-core>
        <versions.jackson-core>2.14.1</versions.jackson-core>
        <versions.jackson-datatype>2.14.1</versions.jackson-datatype>
        <versions.rest-assured>5.3.0</versions.rest-assured>
        <versions.selenium>4.10.0</versions.selenium>
        <versions.webDriverManager>5.4.1</versions.webDriverManager>
        <versions.testng>7.7.1</versions.testng>
        <versions.logback>1.2.3</versions.logback>
        <versions.awaitility>4.2.0</versions.awaitility>
        <versions.java-websocket>1.5.3</versions.java-websocket>
        <versions.guava>31.1-jre</versions.guava>

        <!-- Plugin Versions -->
        <version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
        <versions.lombok>1.18.24</versions.lombok>
        <versions.lombok-maven>1.18.20.0</versions.lombok-maven>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>${versions.java-websocket}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${versions.lombok}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok-maven</artifactId>
            <version>${versions.lombok-maven}</version>
            <type>pom</type>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${versions.logback}</version>
        </dependency>

        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${versions.rest-assured}</version>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${versions.assertj-core}</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${versions.testng}</version>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${versions.postgresql-connector}</version>
        </dependency>

        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>${versions.awaitility}</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${versions.selenium}</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${versions.guava}</version>
        </dependency>

        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${versions.webDriverManager}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId>
            <version>2.9.0</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${versions.jackson-datatype}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${versions.maven-surefire-plugin}</version>
                <configuration>
                    <parallel>methods</parallel>
                    <threadCount>20</threadCount>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
